[project]
name = "chordpro-renderer"
version = "1.0.5"
description = "ChordPro parser, renderer, and Flask extension"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jared McKnight", email = "jmcknight@archertech.ca" },
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "markupsafe>=2.0",
]

[project.urls]
Homepage = "https://github.com/jnhmcknight/chordpro"
Repository = "https://github.com/jnhmcknight/chordpro"
Issues = "https://github.com/jnhmcknight/chordpro/issues"

[project.scripts]
chordpro = "chordpro.cli:main"

[project.optional-dependencies]
flask = [
    "flask>=3.0",
]
babel = [
    "flask-babel>=4.0",
]
pdf = [
    "reportlab>=4.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.7",
    "pytest>=8.0",
    "pytest-cov>=5.0.0",
    "pytest-flask>=1.3.0",
    "pytest-randomly>=4.0.1",
    "pytest-timeout>=2.4.0",
    "pyright",
    "ruff",
    "chordpro-renderer[flask,babel,pdf]",
]

[tool.pytest.ini_options]
timeout = 15
testpaths = ["tests"]
addopts = "--cov=chordpro --cov-report=term-missing"

[build-system]
requires = ["uv_build>=0.6"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "chordpro"

[tool.pyright]
include = ["chordpro"]
useLibraryCodeForTypes = true
verboseOutput = true
venvPath = "."
venv = ".venv"
